Soumissions/1.0/LaTeX/introduction/introduction.md
L'augmentation sans-précédent de l'empreinte anthropique sur les écosystèmes depuis l'ère industrielle a motivé la volonté de comprendre la place qu'occupe l'humanité dans le milieu qu'elle habite, en particulier à propos des océans, longtemps considérés comme immarcescibles. La totalité des écosystèmes marins, qu'ils soient côtiers, pélagiques ou profonds, subit au moins une influence d'origine anthropique [@Halpern2019], et l'intensité et la diversité de ces pressions est en constante augmentation [@Smith2011; @Boonstra2015]. Fortes de ce constat, plusieurs organisations internationales, comme la *Convention on Biological Diversity* sous l'égide des Nations Unies, ont mis en place des objectifs concrets de protection des écosystèmes, dans le but de guider les initiatives de conservation et de développement durable [@UN1992; -@UN2020]. Ces initiatives représentent des opportunités uniques d'augmenter les interactions entre scientifiques, industriels, politiques et citoyens afin d'accroître et diffuser nos connaissances sur les écosystèmes marins.

# Écosystème : communautés et habitats {-}

Un écosystème est un ensemble constitué de deux composantes interconnectées. La première est la composante abiotique, liée aux paramètres physiques, chimiques et géologiques du milieu, qui est représentée par les habitats (ensemble de conditions environnementales particulières) [@Allaby2010; @Morin2011]. La seconde est la composante biotique, correspondant aux espèces présentes dans ce milieu, regroupées en communautés (ensemble d'espèces vivant dans un habitat particulier) [@Allaby2010; @Morin2011]. Cette définition inclut également les relations au sein de chaque composante, par exemple les interactions entre individus d'une même espèce (intraspécifiques) ou d'espèces différentes (interspécifiques).

Le terme "biodiversité" est employé pour désigner la diversité biologique d'un écosystème, et celle-ci peut être définie selon plusieurs perspectives, qu'elle soit spécifique (nombre de taxons différents), génétique (nombre des gènes différents), fonctionnelle (nombre de fonctions différentes) ou écosystémique (nombre d'habitats différents) [@UN1992; @Wilson1992; @Gray1997; @Gaston2004; @Hooper2005; @Stachowicz2007]. Le caractère multiple de cette définition rend son interprétation particulièrement complexe, et la diversité spécifique est généralement employée comme un indicateur unique de la biodiversité [par ex. @UN1992]. En effet, les liens entre la diversité spécifique et la structure d'un écosystème ont été mis en évidence aussi bien en milieu terrestre [par ex. @Hooper2005] qu'aquatique [par ex. @Giller2004; @OConnor2005].

La persistance d'une espèce dans un écosystème est intrinsèquement reliée à son habitat, où elle effectuera des compromis (*trade-offs*) en fonction de son métabolisme et de son comportement afin de maintenir sa population [@Morin2011]. Ceci constitue la théorie de la niche écologique, qui peut être définie selon plusieurs concepts [@Grinnell1917; @Elton1927; @Hutchinson1957; @Hardin1960; @MacArthur1967]. En retour, les espèces induisent des modifications de l'habitat, par exemple en diminuant la disponibilité en ressources ou en modifiant l'intégrité physique du milieu [@Schmitz2008; @Stachowicz2007; @Morin2011]. L'étude de la structure et de l'évolution des écosystèmes est donc dépendante, à la fois, de l'étude de la biodiversité, de l'habitat et de leurs équilibres respectifs.

# Perturbation de l'écosystème et effets sur les communautés {-}

De nombreuses études écologiques cherchent à comprendre comment réagissent les différentes composantes de l'écosystème face à une perturbation avant, pendant et après son occurence, notamment dans des buts de conservation ou de restauration. Plusieurs méthodes peuvent être choisies pour répondre à cet objectif, souvent reliées à des disciplines scientifiques particulières, ce qui rend complexe la définition et l'utilisation des termes utilisés [@Borja2012; @Judd2015]. Tout au long de cette thèse de doctorat, les définitions suivantes, illustrées par la Figure \ref{Fig1}, ont été choisies.

Une "perturbation", dans le sens de *disturbance* en anglais, est une force qui affecte des processus environnementaux et/ou modifie un écosystème hors d'une situation d'équilibre [@Odum1979; @Rykiel1985; @Boonstra2015; @Beauchesne2020; @Orr2020]. Nombre de synonymes existent pour cette définition, comme "stresseur" (*stressor*), "déterminant" (*driver of change*) ou "pression" (*pressure*), et le débat n'est pas clos quant à savoir quel terme privilégier [@Crain2008; @Darling2008; @Judd2015; @Cote2016]. L'origine d'une perturbation peut être naturelle, selon des évènements stochastiques (par ex. les tempêtes) ou cycliques (par ex. les saisons), ou bien anthropique, c'est-à-dire reliée aux activités humaines [@Preston2002; @Micheli2016]. Les conséquences d'une perturbation sont regroupées sous les termes "impact" ou "effet", qui vont entrainer des modifications mesurables de processus physiologiques, fonctionnels ou environnementaux au sein de l'écosystème [@Rykiel1985; @Judd2015; @Orr2020].

<!-- Figure 1 -->
\begin{figure}[H]
\centering
\includegraphics[width=0.9\columnwidth]{figures/Intro_Fig1.png}
\caption{Diagramme représentant les liens entre les sources d'une perturbation (d'origine naturelle ou anthropique) et les communautés benthiques.}
\label{Fig1}
\end{figure}

Lorsqu'un écosystème subit une perturbation, celle-ci peut donc se traduire par une modification instantanée et/ou durable des composantes abiotique ou biotique [@Rykiel1985; @Piggott2015]. Ces phénomènes n’ont pas nécessairement les mêmes échelles spatiales et temporelles, où certaines perturbations peuvent être ponctuelles et éphémères, d’autres beaucoup plus diffuses et persistantes [@Levin1992; @Witman2015], ce qui influera sur les notions de résistance (capacité à supporter les effets d'une perturbation), de résilience (temps nécessaire pour atteindre à nouveau l'état avant la perturbation) de l'écosystème.

Au sein des communautés, le maintien de la population d'une espèce est alors conditionné aux réponses qu'elle adoptera pour s'acclimater à ces nouvelles conditions [@Allaby2010; @Morin2011]. Par exemple, une perturbation peut favoriser des espèces adaptées au caractère instable associé à ces évènements [@Pearson1978; @Grall1997]. De telles espèces sont dites opportunistes, présentant une croissance rapide de leur population et une forte densité d'individus de petite taille (appelée stratégie de type r, privilégiant un fort taux de reproduction), en opposition aux espèces longévives et moins abondantes retrouvées dans des environnements plus stables (stratégie de type K, privilégiant le maintien de la population à sa capacité maximale) [@MacArthur1967; @Pianka1970].

# Les communautés benthiques {-}

Avec plus de 70 % de la surface de la planète recouverte par des océans, les écosystèmes marins regroupent une vaste gamme d'environnements. Leurs limites peuvent être définies selon de nombreux critères et en fonction des échelles spatio-temporelles considérées [@Webb2019]. Parmi les critères les plus couramment utilisés se trouvent les écosystèmes pélagiques (dans la colonne d'eau), benthiques (en lien avec les fonds marins), intertidaux (dans la zone de balancement des marées), subtidaux (non-influencés par les marées), côtiers (influencés par les apports d'origine terrestre et sur le talus continental) ou hauturiers (au large des côtes) [@Webb2019]. Il existe différents patrons de biodiversité entre ces écosystèmes [par ex. @Gray1997; @Gaston2000], et les environnements côtiers subtidaux figurent parmi les plus riches et diversifiés.

Le compartiment benthique contient une diversité élevée d'organismes, incluant des assemblages complexes de virus, bactéries, faune et flore. En pratique, ces communautés sont souvent séparées en différents sous-ensembles partageant des caractéristiques communes, afin de répondre à des questions écologiques spécifiques [par ex. @Sheldon1972; @Schwinghamer1981]. Plusieurs catégories d'organismes ont été définies en fonction de leur taille : la microfaune (organismes plus petits que 0.1 mm), la méiofaune (entre 0.1 et 0.5/1 mm), la macrofaune (entre 0.5/1 et 100 mm) et la mégafaune (plus de 100 mm) (Figure \ref{Fig1}) [@Schwinghamer1981; @Warwick1984; @Warwick2006]. La limite séparant la méiofaune et la macrofaune (0.5 ou 1 mm) fait encore aujourd'hui l'objet de débats entre chercheurs ; il s'agit d'une considération importante car le choix de cette limite aura un impact direct sur la résolution taxonomique des communautés étudiées [@McKindsey2001; @Warwick2006].

Les invertébrés macrobenthiques, qui constituent le principal objet d'étude de cette thèse de doctorat, regroupent les espèces de nombreux phyla vivant en lien avec les fonds marins. Ceux-ci peuvent être sessiles (fixé sur un substrat) ou mobile, évoluant dans, sur ou au-dessus du sédiment (respectivement l'endobenthos, l'épibenthos et le suprabenthos) (Figure \ref{Fig2}). De plus, certaines espèces peuvent être benthiques tout au long de leur vie (cycle holobenthique) ou à seulement des étapes précises de leur développement (cycle bentho-pélagique). La diversité de ces modes de vie est reliée à un nombre important de stratégies évolutives mises en œuvre pour prospérer dans l'habitat, que ce soit des méthodes de nutrition (par ex. filtration de l'eau, ingestion du sédiment, le recyclage de matières détritiques), des comportements (par ex. mode de vie, mobilité) ou des interactions biotiques (par ex. symbiose, parasitisme). De plus, les espèces macrobenthiques sont incluses dans des réseaux trophiques complexes, qui permettent les transferts d’énergie à travers l’écosystème.

<!-- Figure 2 -->
\begin{figure}[H]
\centering
\includegraphics[width=0.9\columnwidth]{figures/Intro_Fig2.png}
\caption{Représentation schématique de différents groupes d'espèces au sein d'une communauté biologique, en fonction de leur milieu de vie (A) ou de leur taille (B).}
\label{Fig2}
\end{figure}

Au sein de la macrofaune – et *a fortiori* au sein des communautés benthiques en général –, chaque espèce possède un rôle dans la structure de l'écosystème en lien avec son utilisation de l'habitat. L'étude de ces rôles est particulièrement intéressante pour comprendre la structure des écosystèmes [@Morin2011]. Par exemple, les espèces *ingénieures* modifient directement ou indirectement les caractéristiques d'un écosystème par leur mode de vie (par ex. en créant des structures biogéniques, pouvant jouer le rôle d'habitats pour d'autres espèces) ou leur comportement (par ex. en oxygénant le sédiment profond avec une activité de bioturbation), ce qui permettra à d'autres espèces de profiter d'habitats particuliers [@Meadows1991; -@Meadows2012].

Beaucoup de ces espèces possèdent des capacités d'évitement limitées, ce qui peut conduire une dégradation de l'état des populations et à une mortalité accrue lorsque l'écosystème est perturbé [@Grall1997]. Ceci est notamment le cas pour les espèces sessiles (par ex. les moules ou les anémones), les espèces vivant dans le sédiment (comme les amphipodes ou les mollusques fouisseurs) ou les organismes filtreurs (tels que des polychètes tubicoles ou les éponges) qui sont particulièrement sensibles aux perturbations chimiques affectant la colonne d'eau. La présence (ou l'absence) de ces espèces, ainsi qualifiées de "sentinelles" ou "indicatrices", aura la possibilité de détecter un certain état de l'écosystème [@Pearson1978; @Hooper2005; @Dauvin2010].

# Influence anthropique {-}

À l'échelle mondiale, la population humaine mondiale a atteint 7.7 milliards d'individus en 2019, et les projections démographiques indiquent qu'elle s'élèvera à 9.7 milliards en 2050 [@UN2019]. Avec une proportion importante de cette population qui entretient des liens étroits avec l'océan - environ 40 % vit à moins de 100 km des côtes -, la croissance de l'influence humaine sur les milieux marins est évidente [@Ban2008; @Smith2011, @SEDAC2020]. De nombreux exemples ont été documentés à travers le monde, mettant ainsi en lumière des conséquences sur les écosystèmes comme l'extinction locale de populations [par ex. la disparition de la morue Arctique due à la pêche intensive de ses stocks, @DFO2007], l'introduction d'espèces exotiques [par ex. l'introduction de l'ascidie *Botrylus schlosseri* à cause du trafic maritime, @Ma2017] ou encore la destruction d'habitats [par ex. due à l'exploitation de ressources fossiles, @Archambault2016].

L'étude de l'influence anthropique a souvent été focalisée sur une activité humaine (par exemple le dragage ou la pêche), un processus (tels que le réseau trophique ou les réponses physiologiques à un contaminant) ou un certain type d'écosystème (comme les récifs coralliens ou les forêts de macroalgues) [REF @Borja2008c]. Le déploiement de technologies telles qu'une puissance de calcul informatique et une couverture satellitaire accrues permettent aujourd'hui de considérer l'empreinte humaine d'une façon plus holistique [@Micheli2016; @Dreujou2020a]. De plus, l'étude du cumul de différentes influences permet de répondre à des questions écologiques plus complexes, notamment en étudiant de possibles effets émergents dues aux interactions entre activités [@Crain2008; @Darling2008; @Halpern2013; @Brown2014; @Piggott2015; @Galic2018; @Hodgson2019a; @Beauchesne2020].

L'utilisation du terme "impact", nécessite de considérer comment les composantes de l'écosystème répondent aux perturbations qui les influencent [@Judd2015; @Solan2016]. Il existe un éventail de méthodes permettant l'évaluation des impacts sur les communautés et les habitats, telles que les campagnes de terrain adoptant des plans d'échantillonnage spécifiques comme les plans *Before-After and Control/Impact* (BACI), les expériences en laboratoire comparant conditions contrôles et impactées, ou des modélisations informatiques [@Legendre1998; @Quinn2002; @Underwood2002; @Underwood2012]. De plus, les modèles intégratifs, tels que le modèle *Driver-Pressure-State-Impact-Response* (DPSIR), ou les projets à stratégie holistique, comme le *marine spatial planning* ou le *ecosystem-based management*, permettent de bâtir des liens nécessaires entre disciplines scientifiques et acteurs environnementaux [@Levin2009; @Atkins2011; @Hayes2015; @Borja2016b; @Santos2019].

De nombreuses évaluations d'impacts des activités humaines s'intéressent à caractériser le "statut écologique" des milieux étudiées. La notion de "bon état écologique" a été définie dans l'Article 3 de la *Marine Strategy Framework Directive* [@EC2008; @Borja2013] :

> *"Good Environmental Status is the environmental status of marine waters where these provide ecologically diverse and dynamic oceans and seas which are clean, healthy and productive."*

Cette définition s'accompagne d'objectifs concrets, notamment dans le cadre de décisions internationales telles que l'Accord de Paris sur le climat (cible de 10 % d'aires marines et côtières protégées), *Aichi Biodiversity Targets* et les *Sustainable Development Goals* [@CBD2010; @SDG2015; @UN2015]. Afin de guider les objectifs de conservation et de protection des écosystèmes, les études écologiques peuvent avoir recours à des indicateurs environnementaux, c'est-à-dire des métriques quantitatives qui synthétisent des composantes de l'écosystème pour détecter des changements et inférer un statut [@Rice2003; @Rees2008]. Dans le cas de la *Marine Strategy Framework Directive*, onze Descripteurs du bon état écologique ont été établis et chacun comporte de nombreux indicateurs utilisés dans des protocoles standardisés [@EC2008]. Même si beaucoup de ces méthodes ont fait leurs preuves [par ex. @Borja2000], elles peuvent être complexes à appliquer dans d'autres écosystèmes que ceux dédiés à leur développement ou être trop intégratrices pour correctement détecter la variation des écosystèmes [@Niemi2004; @Pinto2009].

Différentes voies d'amélioration ont été proposées, comme l'intégration de perturbations multiples, de gradients de perturbation ou la considération de réseaux écosystémiques. Le score d'impact cumulé développé par @Halpern2008 (mis à jour par @Halpern2019) constitue un exemple récent, où plusieurs stresseurs anthropiques ont été caractérisés à l'échelle globale. Cette méthode combine deux propriétés de l'écosystème pour calculer un score d'impact : la vulnérabilité (susceptibilité de l'écosystème à une perturbation) et l'exposition (occurrence spatiale et temporelle de la perturbation) [@Wilson2005; @Halpern2007; @Halpern2008]. En l'état des connaissances, considérer la vulnérabilité de façon adéquate demande un large volume de données (par ex. sur les tolérances physiologiques des espèces, les interactions biotiques ou les modes d'actions des perturbations) qui peuvent être spécifiques à des écosystèmes particuliers, ce qui augmente rapidement la complexité de ces évaluations [@Wilson2005, @Beauchesne2020]. Une solution possible est de se concentrer sur l'exposition, afin de cibler quels compartiments pourraient être influencés par des perturbations spécifiques, et ainsi concentrer les efforts d'évaluation de la vulnérabilité sur les interactions déterminées pertinentes.

L'évaluation du statut de l'écosystème peut être réalisée à différentes échelles spatiales selon les systèmes écologiques, les objectifs de conservation ainsi que les unités de gestion considérées. Bien que les études régionales et mondiales permettent d'obtenir des informations pertinentes sur les tendances à large échelle et de mobiliser un ensemble de nations pour atteindre des objectifs communs, il est important de considérer des études à plus petite échelle (par ex. à l'échelle d'un estuaire, d'une baie, d'une côte) car les processus écologiques ne sont pas identiques et d'autres types de réponses peuvent être analysées [@Comin2004; @Crowe2015; @Solan2016]. De plus, la mobilisation des parties publiques, industrielles et scientifiques pour des projets de protection environnementale peut être sensiblement accrue.

# Application dans le Golfe du Saint-Laurent {-}

En 2019, 13,8 % des côtes du Canada étaient régulées par une forme de gestion publique et 8,9 % (511 906 km^2^) étaient officiellement protégées [@ECCC2020]. Ce total pourrait augmenter à 30 % d'ici 2030, suite à la décision de rejoindre la *Global Ocean Alliance* [@GC2020]. Le long de la côte Est du Canada, le complexe de l'Estuaire et du Golfe du Saint-Laurent est l'une des régions qui concentre le plus d'activités humaines [@Belley2010; @Daigle2017; @Schloss2017]. Le transport de marchandises depuis l'Atlantique vers les Grands Lacs est un axe commercial majeur, à partir duquel sont connectées de nombreuses chaînes d'approvisionnement au Canada et aux États-Unis [@GQ2017].

Le Golfe du Saint-Laurent comprend les eaux entre Pointe-des-Monts jusqu'aux détroits de Cabot et Belle-Isle (Figure \ref{Fig3}). Cette région est considérée subarctique, subissant ainsi de fortes variations de température et de salinité dues à la formation de glace sur les côtes et de banquise en hiver, ainsi que d'importants apports d'eau douce suite au dégel au printemps [@Dutil2012; @Demers2018]. Il s'agit d'une zone importante de biodiversité, avec la présence d'espèces emblématiques, telles que des mammifères marins (par ex. *Delphinapterus leucas*, *Megaptera novaeangliae*) [@Schloss2017; @ROMM2020], et de nombreuses espèces d'intérêt commercial pour la pêche (par ex. *Chionoecetes opilio*, *Pandalus borealis*, *Gadus morua*, *Hippoglossus hippoglossus*) [@DFO2019]. Plusieurs initiatives à l'échelle du Québec et du Canada font de la sauvegarde des écosystèmes dans le système du Saint-Laurent une priorité [@GQ2015], et le Ministère des Pêches et Océans a désigné cette région comme une aire de gestion intégrée avec des objectifs de protection des écosystèmes [@DFO2009; @DFO2013].

Selon @Beauchesne2020, plusieurs régions concentrent un nombre élevé d'activités humaines, notamment le long des côtes à l'ouest du Golfe. Ceci est d'autant plus vrai pour les zones industrielles portuaires, qui correspondent à un espace délimité servant à des fins industrielles et situé à proximité de services portuaires ainsi que d’infrastructures routières et ferroviaires [@GC2020]. Parmi les zones industrielles portuaires présentes dans le Golfe du Saint-Laurent, celle située à Sept-Îles (région Côte-Nord) est certainement la plus importante. Sept-Îles est le 2^ème^ port québécois, le 4^ème^ canadien, et en 2019, 29,3 millions de tonnes de marchandises y ont été échangées [@Binkley2020; @PortSI2020]. Les principales industries sont principalement la transformation du minerai acheminé par train depuis les mines du nord du Québec et du Labrador, la pêche commerciale (crabe des neige, crevette nordique, flétan et bulot principalement), ainsi que le tourisme [@DFO2019]. La région maritime de Sept-Îles est composée de deux éléments géographiques d'importance : la Baie des Sept Îles et l'archipel à son entrée (Figure \ref{Fig3}).

<!-- Figure 3 -->
\begin{figure}[H]
\centering
\includegraphics[width=0.9\columnwidth]{figures/Intro_Fig3.png}
\caption{Carte de la zone d'étude considérée tout au long de cette thèse de doctorat.}
\label{Fig3}
\end{figure}

Peu d'études écologiques ont cherché à caractériser ces écosystèmes ainsi que leur environnement abiotique, ce qui pose un défi conséquent dans le cadre de la stratégie de protection des écosystèmes dans le système du Saint-Laurent. La zone industrielle portuaire de Sept-Îles représente donc un cadre d'étude particulièrement intéressant afin de comprendre comment les activités humaines influencent des écosystèmes côtiers canadiens à l'échelle locale.

# Objectifs et structure de la thèse {-}

## Objectifs spécifiques {-}

L'objectif principal de cette thèse de doctorat est ainsi de décrire les relations entre communautés benthiques et activités humaines à l'échelle d'une zone industrielle-portuaire. Ce projet de recherche s'inscrit dans les problématiques spécifiques du *Canadian Healthy Oceans Network* II (thème "*Coastal stressors*") et du regroupement Québec-Océan (axe "Intégrité des milieux marins côtiers et enjeux socioéconomiques régionaux").

Pour répondre à cet objectif, la thèse est divisée en trois chapitres, illustrés par le schéma conceptuel de la Figure \ref{Fig4}. En premier lieu, j'ai effectué la première description synthétique de la structure des écosystèmes benthiques côtiers dans la région de Sept-Îles, permettant de disposer de données de base sur les communautés macrobenthiques et leurs habitats (chapitre 1). En se basant sur ces résultats, j'ai ensuite cherché à déterminer quel était le statut environnemental de la zone industrielle-portuaire de Sept-Îles en testant plusieurs indicateurs écologiques (chapitre 2). Enfin, partant du fait que beaucoup de ces indicateurs possèdent des limitations dans leur interprétation, j'ai développé un modèle local pour caractériser l'exposition des communautés benthiques aux activités humaines et j'ai testé l'efficacité de ce modèle à prédire la structure des communautés benthiques (chapitre 3).

<!-- Figure 4 -->
\begin{figure}[H]
\centering
\includegraphics[width=0.9\columnwidth]{figures/Intro_Fig4.png}
\caption{Diagramme intégratif représentant les liens entre les différents chapitres de la thèse de doctorat. Les flèches grises correspondent aux liens entre composantes considérées des écosystèmes de la région d'étude (encadrés gris) et les chapitres (encadrés pourpres). Les flèches pourpres correspondent aux débouchés de chaque chapitre.}
\label{Fig4}
\end{figure}

## Structure des chapitres {-}

\noindent \textit{Chapitre 1 : Évaluation de la biodiversité et de l'habitat des communautés benthiques côtiers en zone industrielle-portuaire subarctique} \linebreak[2]

La région considérée pour cette thèse de doctorat possède peu de données écologiques sur ses écosystèmes benthiques. Afin d'évaluer efficacement les réponses des écosystèmes aux perturbations, notamment en disposant de conditions de référence robustes, ce chapitre a pour objectifs :

- Décrire les habitats et communautés macrobenthiques dans la région de Sept-Îles
- Évaluer les liens entre les communautés et les variables abiotiques de leur habitat
- Étudier la similarité des assemblages benthiques dans la zone considérée
- Évaluer comment la taille considérée pour étudier le compartiment benthique influence la description de l'écosystème

Deux campagnes de terrain ont permis de récolter les données écologiques nécessaires à répondre à ces objectifs, en particulier grâce à l'identification des espèces macrobenthiques et la mesure de variables abiotiques. Plusieurs groupes de stations d'échantillonnage ont été formés en fonction de la similarité de leurs assemblages d'espèces, et leur relation avec l'habitat a été évalué afin de comprendre quelles étaient les variables structurantes. \linebreak[4]

\noindent \textit{Chapitre 2 : Identifier le statut écologique de communautés benthiques côtières - étude de cas dans une zone industrielle portuaire canadienne} \linebreak[2]

En se basant sur les travaux réalisés pour le chapitre 1, il est possible de se demander si les écosystèmes étudiés sont en bon état écologique, avec des perspectives de gestion et de conservation. Ainsi, les objectifs de ce chapitre sont :

- Comparer l'efficacité de plusieurs indicateurs écologiques pour déterminer le statut des écosystèmes
- Valider les résultats obtenus en mettant en relation le statut écologique obtenu avec les paramètres de l'habitat, afin de sélectionner des applications appropriées

Les indicateurs ont été sélectionnés au moyen d'une revue de littérature puis classés selon leur méthodologie. Ils ont ensuite été appliqués sur les données collectées lors du chapitre 1, après recherche d'informations complémentaires sur les espèces benthiques échantillonnées, notamment leur diversité et leurs réponses aux perturbations. Enfin, les corrélations entre indicateurs et paramètres de l'habitat ont été testées pour comprendre la pertinence de chaque indicateur. \linebreak[4]

\noindent \textit{Chapitre 3 : Exposition des écosystèmes benthiques côtiers aux activités humaines - modèle local d'évaluation et prédiction de la structure des communautés} \linebreak[2]

Ce dernier chapitre entreprend de mettre en relation les communautés macrobenthiques avec les activités humaines présentes dans cette région en décrivant l'exposition anthropique des écosystèmes à l'échelle locale. Les objectifs spécifiques sont :

- Développer un modèle pour déterminer l'exposition des écosystèmes benthiques
- Prédire la structure des communautés en fonction de leur exposition anthropique (individuelle et cumulée)

Pour ce chapitre, des modèles de diffusion particulaire ont été considérés pour déterminer les régions les plus exposées depuis les sources des activités humaines considérées. Le principal défi a été de modéliser adéquatement le comportement de ces particules théoriques dans un environnement où peu de données, notamment sur la circulation océanique, étaient disponibles. Ces modèles ont ainsi permis d'analyser les influences individuelles et cumulées des activités humaines. Enfin, des modèles joints de distribution d'espèces - qui prennent en compte les interactions entre les taxa présents dans une communautés - ont été utilisés pour déterminer la structure des communautés benthiques avec les indices d'exposition comme prédicteurs et identifier de potentielles zones perturbées.
