Soumissions/2.0/LaTeX/introduction/introduction.md
L'augmentation sans précédent de l'empreinte anthropique sur les écosystèmes depuis le début de l'ère industrielle a motivé la volonté de comprendre la place qu'occupe l'humanité dans le milieu qu'elle habite, en particulier à propos des océans, longtemps considérés comme immarcescibles. La totalité des écosystèmes marins, qu'ils soient côtiers, pélagiques ou profonds, subit au moins une influence d'origine anthropique [@Halpern2019], et l'intensité et la diversité de ces pressions sont en constante augmentation [@Smith2011; @Boonstra2015]. Fortes de ce constat, plusieurs organisations internationales, comme la *Convention on Biological Diversity* sous l'égide des Nations Unies, ont mis en place des objectifs concrets de protection des écosystèmes, dans le but de guider les initiatives de conservation et de développement durable [@UN1992]. Ces initiatives représentent des opportunités uniques d'augmenter les interactions entre scientifiques, industriels, politiques et citoyens afin d'accroître et diffuser nos connaissances sur les écosystèmes marins.

# Écosystème : communautés et habitats {-}

Un écosystème est un ensemble constitué de deux composantes interconnectées. La première est la composante abiotique, liée aux paramètres physiques, chimiques et géologiques du milieu, qui est représentée par les habitats (ensemble de conditions environnementales particulières) [@Allaby2010; @Morin2011]. La seconde est la composante biotique, correspondant aux espèces présentes dans ce milieu, regroupées en communautés (ensemble d'espèces vivant dans un habitat particulier) [@Allaby2010; @Morin2011]. Cette définition inclut également les relations au sein de chaque composante, par exemple les interactions entre individus d'une même espèce (intraspécifiques) ou d'espèces différentes (interspécifiques).

Le terme "biodiversité" est employé pour désigner la diversité biologique d'un écosystème, et celle-ci peut être définie selon plusieurs perspectives, qu'elle soit spécifique (nombre de taxons différents), génétique (nombre des gènes différents), fonctionnelle (nombre de fonctions différentes) ou écosystémique (nombre d'habitats différents) [@UN1992; @Wilson1992; @Gray1997; @Gaston2004; @Hooper2005; @Stachowicz2007]. Le caractère multiple de cette définition rend son interprétation particulièrement complexe, et la diversité spécifique est généralement employée comme l'indicateur privilégié de la biodiversité [par ex. @UN1992]. En effet, les liens entre la diversité spécifique et la structure d'un écosystème ont été mis en évidence aussi bien en milieu terrestre [par ex. @Hooper2005] qu'aquatique [par ex. @Giller2004; @OConnor2005].

La persistance d'une espèce dans un écosystème est intrinsèquement reliée à son habitat, où elle effectuera des compromis (*trade-offs*) en fonction de son métabolisme et de son comportement afin de maintenir sa population [@Morin2011]. Ceci constitue la théorie de la niche écologique, qui a été conceptualisée par plusieurs auteurs comme un ensemble de conditions environnementales (abiotiques et biotiques) permettant la survie d'une espèce [@Grinnell1917; @Elton1927; @Hutchinson1957; @Hardin1960; @MacArthur1967]. En retour, les espèces induisent des modifications de l'habitat, par exemple en diminuant la disponibilité en ressources ou en modifiant l'intégrité physique du milieu [@Schmitz2008; @Stachowicz2007; @Morin2011]. L'étude de la structure et de l'évolution des écosystèmes est donc dépendante de l'étude de la biodiversité et de l'habitat, ainsi que de leur évolution spatiale et temporelle.

# Perturbations de l'écosystème et effets sur les communautés {-}

De nombreuses études écologiques cherchent à comprendre comment réagissent les différentes composantes de l'écosystème face à une perturbation avant, pendant et après son occurrence, notamment dans des buts de conservation ou de restauration. Plusieurs méthodes peuvent être choisies pour répondre à cet objectif, souvent reliées à des disciplines scientifiques particulières, ce qui rend complexes la définition et l'utilisation d'un lexique approprié [@Borja2012; @Judd2015]. Tout au long de cette thèse de doctorat, les définitions suivantes, illustrées par la Figure \ref{Intro_Fig1}, ont été utilisées.

Une "perturbation", dans le sens de *disturbance* en anglais, est une force qui affecte des processus environnementaux et/ou modifie un écosystème hors d'une situation d'équilibre [@Odum1979; @Rykiel1985; @Boonstra2015; @Beauchesne2020a; @Orr2020]. Nombre de synonymes existent pour cette définition, comme "stresseur" (*stressor*), "déterminant" (*driver of change*) ou "pression" (*pressure*), et le débat n'est pas clos quant à savoir quel terme privilégier [@Crain2008; @Darling2008; @Judd2015; @Cote2016]. L'origine d'une perturbation peut être naturelle, selon des évènements stochastiques (par ex. les tempêtes) ou cycliques (par ex. les saisons), ou bien anthropiques, c'est-à-dire en fonction des activités humaines [@Preston2002; @Micheli2016]. Les conséquences d'une perturbation sont regroupées sous les termes "impact" ou "effet", qui vont entrainer des modifications mesurables de processus physiologiques, fonctionnels ou environnementaux au sein de l'écosystème [@Rykiel1985; @Judd2015; @Orr2020].

\begin{figure}[H]
\centering
\includegraphics[width=0.9\columnwidth]{figures/Intro_Fig1.png}
\caption{Diagramme représentant les liens entre les sources d'une perturbation (d'origine naturelle ou anthropique) et les communautés benthiques.}
\label{Intro_Fig1}
\end{figure}

Lorsqu'un écosystème subit une perturbation, celle-ci peut donc se traduire par une modification instantanée et/ou durable des composantes abiotique ou biotique [@Rykiel1985; @Piggott2015]. Ces phénomènes n'ont pas nécessairement les mêmes échelles spatiales et temporelles, où certaines perturbations peuvent être ponctuelles et éphémères, d'autres beaucoup plus diffuses et persistantes [@Levin1992; @Witman2015], ce qui influera sur les notions de résistance (capacité à supporter les effets d'une perturbation), de résilience (temps nécessaire pour atteindre à nouveau l'état avant la perturbation) de l'écosystème.

Au sein des communautés, le maintien de la population d'une espèce est alors conditionné par les réponses qu'elle adoptera pour s'acclimater à ces nouvelles conditions [@Allaby2010; @Morin2011]. Par exemple, une perturbation peut favoriser des espèces adaptées au caractère instable associé à ces évènements [@Pearson1978; @Grall1997]. De telles espèces sont dites opportunistes, présentant une croissance rapide de leur population et une forte densité d'individus de petite taille (appelée stratégie de type r, privilégiant un fort taux de reproduction), en opposition aux espèces longévives et moins abondantes retrouvées dans des environnements plus stables (stratégie de type K, privilégiant le maintien de la population à sa capacité maximale) [@MacArthur1967; @Pianka1970].

# Les communautés benthiques {-}

Avec plus de 70 % de la surface de la planète recouverte par des océans, les écosystèmes marins regroupent une vaste gamme d'environnements. Leurs limites peuvent être définies selon de nombreux critères et en fonction des échelles spatio-temporelles considérées [@Webb2019]. Parmi les critères les plus couramment utilisés se trouvent les écosystèmes pélagiques (dans la colonne d'eau), benthiques (en lien avec les fonds marins), intertidaux (influencés par le cycle des marées), subtidaux (en dessous de la zone de balancement des marées), côtiers (influencés par les apports d'origine terrestre et sur le talus continental) ou hauturiers (au large des côtes) [@Webb2019]. Il existe différents patrons de biodiversité entre ces écosystèmes, et les environnements côtiers subtidaux figurent parmi les plus riches et les plus diversifiés [par ex. @Gray1997; @Gaston2000].

Le compartiment benthique contient une diversité élevée d'organismes, incluant des assemblages complexes de virus, bactéries, faune et flore. Afin de répondre à des questions écologiques spécifiques, ces communautés sont souvent séparées en différents sous-ensembles partageant des caractéristiques communes [par ex. @Sheldon1972; @Schwinghamer1981]. Plusieurs catégories d'organismes ont été définies en fonction de leur taille : la microfaune (organismes plus petits que 0,1 mm), la méiofaune (entre 0,1 et 0,5/1 mm), la macrofaune (entre 0,5/1 et 100 mm) et la mégafaune (plus de 100 mm) (Figure \ref{Intro_Fig2}) [@Schwinghamer1981; @Warwick1984; @Warwick2006]. La limite séparant la méiofaune et la macrofaune (0,5 ou 1 mm) fait encore aujourd'hui l'objet de débats entre chercheurs ; il s'agit d'une considération importante car le choix de cette limite aura un impact direct sur la résolution taxonomique des communautés étudiées [@McKindsey2001; @Warwick2006].

Les invertébrés macrobenthiques, qui constituent le principal objet d'étude de cette thèse de doctorat, regroupent les espèces de nombreux phylums vivant en lien avec les fonds marins. Ceux-ci peuvent être sessiles (fixés sur un substrat) ou mobiles, évoluant dans, sur ou au-dessus du sédiment (respectivement l'endobenthos, l'épibenthos et le suprabenthos) (Figure \ref{Intro_Fig2}). De plus, certaines espèces peuvent être benthiques tout au long de leur vie (cycle holobenthique) ou à seulement des étapes précises de leur développement (cycle bentho-pélagique). La diversité de ces modes de vie est reliée à un nombre important de stratégies évolutives mises en œuvre pour prospérer dans l'habitat, que ce soit des méthodes de nutrition (par ex. filtration de l'eau, ingestion du sédiment, recyclage de matières détritiques), des comportements (par ex. mode de vie, mobilité) ou des interactions biotiques (par ex. symbiose, parasitisme). De plus, les espèces macrobenthiques sont incluses dans des réseaux trophiques complexes, qui permettent les transferts d'énergie à travers l'écosystème.

\begin{figure}[H]
\centering
\includegraphics[width=0.9\columnwidth]{figures/Intro_Fig2.png}
\caption{Représentation schématique de différents groupes d'espèces au sein d'une communauté biologique, en fonction de leur milieu de vie (A) ou de leur taille (B).}
\label{Intro_Fig2}
\end{figure}

Au sein de la macrofaune -- et *a fortiori* au sein des communautés en général --, chaque espèce possède un rôle dans le fonctionnement de l'écosystème en lien avec l'utilisation qu'elle fait de son habitat. L'étude de ces rôles est particulièrement intéressante pour comprendre la structure des écosystèmes [@Morin2011]. Par exemple, les espèces ingénieures modifient directement ou indirectement les écosystèmes par leur mode de vie (par ex. en créant des structures biogéniques, pouvant jouer le rôle d'habitats pour d'autres espèces) ou leur comportement (par ex. en oxygénant le sédiment profond avec une activité de bioturbation), ce qui permettra à d'autres espèces de profiter d'habitats particuliers [@Meadows1991; @Meadows2012].

Beaucoup de ces espèces possèdent des capacités d'évitement limitées, ce qui peut conduire à une dégradation de l'état des populations et à une mortalité accrue lorsque l'écosystème est perturbé [@Grall1997]. Ceci est notamment le cas pour les espèces sessiles (par ex. les moules ou les anémones), les espèces vivant dans le sédiment (comme les amphipodes ou les mollusques fouisseurs) ou les organismes filtreurs (tels que des polychètes tubicoles ou les éponges) qui sont particulièrement sensibles aux perturbations chimiques affectant la colonne d'eau. La présence (ou l'absence) de ces espèces, ainsi qualifiées de "sentinelles" ou "indicatrices", aura la possibilité de renseigner sur un certain état de l'écosystème [@Pearson1978; @Hooper2005; @Dauvin2010].

# Influence anthropique et statut environnemental {-}

À l'échelle mondiale, la population humaine a atteint 7,7 milliards d'individus en 2019, et les projections démographiques indiquent qu'elle s'élèvera à 9,7 milliards en 2050 [@UN2019]. Avec une proportion importante de cette population qui entretient des liens étroits avec l'océan -- environ 40 % vit à moins de 100 km des côtes --, la croissance de l'influence humaine sur les milieux marins est évidente [@Ban2008; @Smith2011; @SEDAC2020]. De nombreux exemples ont été documentés à travers le monde, mettant ainsi en lumière des conséquences sur les écosystèmes comme l'extinction locale de populations [par ex. la disparition de la morue arctique due à la pêche intensive de ses stocks, @DFO2007], l'introduction d'espèces exotiques [par ex. l'introduction de l'ascidie *Botrylus schlosseri* à cause du trafic maritime, @Ma2017] ou encore la destruction d'habitats [par ex. due à l'exploitation de ressources fossiles, @Archambault2017].

L'étude de l'influence anthropique a souvent été focalisée sur une activité humaine (par exemple le dragage ou la pêche), un processus (telles que les réponses physiologiques à un contaminant) ou un certain type d'écosystème (comme les récifs coralliens ou les forêts de macroalgues) [@Borja2008c]. Le déploiement de technologies telles qu'une puissance de calcul informatique et une couverture satellitaire accrues permettent aujourd'hui de considérer l'empreinte humaine d'une façon plus holistique [@Micheli2016; @Dreujou2020a]. En particulier, il est possible d'étudier les effets émergents dus aux interactions entre différentes activités humaines, dans le but de mieux comprendre et prédire l'évolution des écosystèmes [@Crain2008; @Darling2008; @Halpern2013; @Brown2014; @Piggott2015; @Galic2018; @Hodgson2019a; @Beauchesne2020a].

Il existe un éventail de méthodes permettant l'évaluation de l'influence anthropique sur les communautés et les habitats dans le cadre de stratégie marines. Celles-ci peuvent être basées sur des travaux de terrain (comme les plans d'échantillonnage *Multiple Before-After and Control/Impact*), des expériences (par exemple en observant les réponses de communautés selon des conditions contrôles et impactées) ou des modélisations informatiques [@Hurlbert1984; @Legendre1998; @Quinn2002; @Underwood2002; @Underwood2012]. Les résultats obtenus peuvent ainsi contribuer à des modèles intégratifs tels que le modèle *Driver-Pressure-State-Impact-Response* (DPSIR), ou les évaluations à stratégie holistique, comme la planification spatiale marine (*marine spatial planning*) ou la gestion basée sur l'écosystème (*ecosystem-based management*), permettent de bâtir des liens nécessaires entre disciplines scientifiques et acteurs environnementaux [@Levin2009; @Atkins2011; @Hayes2015; @Borja2016b; @Santos2019]. La contribution de ces différents types de travaux aux stratégies marines a été discutée par @Dreujou2020a, avec la mise en évidence de priorités de recherche pour accroître leur efficacité au sein de stratégies de gestion (article présenté en annexe de cette thèse).

En se basant sur ces résultats, il est possible de déterminer un statut environnemental pour les écosystèmes étudiés. La notion de "bon état écologique" a été définie dans l'Article 3 de la Directive-cadre stratégie milieu marin [@EC2008; @Borja2013] :

> *"Good Environmental Status is the environmental status of marine waters where these provide ecologically diverse and dynamic oceans and seas which are clean, healthy and productive."*

La définition ci-dessus est à coupler avec les onze descripteurs établis par @EC2008 afin de considérer le statut de l'écosystème en fonction de concepts intercorrélés (comme la biodiversité, le réseau trophique, l'intégrité du fond marin ou les concentrations en contaminants). Bien que le concept de bon état écologique soit encore débattu, notamment lorsque sont considérées les notions de résistance, résilience, productivité et fonctions, celui-ci permet de fournir une base au développement de stratégies de gestion. Celles-ci définissent un certain nombre d'objectifs et de cibles à atteindre, déterminés en fonction des connaissances scientifiques, des sphères politique et diplomatique, et des écosystèmes sélectionnés. Plusieurs exemples à l'échelle internationale peuvent être cités, tels que l'Accord de Paris sur le climat (cible de 10 % d'aires marines et côtières protégées), les objectifs d'Aichi pour la biodiversité (*Aichi Biodiversity Targets*) et les objectifs de développement durable (*Sustainable Development Goals*) [@CBD2010; @UN2015; @SDG2020].

Dans cette optique, les études écologiques peuvent avoir recours à des indicateurs environnementaux, c'est-à-dire des métriques quantitatives qui se basent sur des composantes de l'écosystème pour obtenir un statut environnemental par rapport à des conditions de référence [@Rice2003; @Rees2008]. Les indicateurs dits "biotiques" s'intéressent à la structure des communautés et à l'identité des espèces présentes pour calculer le statut de l'écosystème. Certains indicateurs biotiques sont calculés à partir de mesures d'abondance ou de diversité (par ex. le W-Statistic Index, l'indice de Shannon ou la diversité fonctionnelle), tandis que d'autres considèrent la prévalence de groupes d'espèces caractéristiques en fonction de leur réponse à une perturbation (par ex. le AZTI Marine Biotic Index) [@Pinto2009; @Teixeira2016]. Même si beaucoup de ces méthodes ont fait leurs preuves, elles peuvent être complexes à appliquer pour différentes régions et perturbations, ou être dans l'incapacité de détecter adéquatement la variation des écosystèmes [@Niemi2004; @Pinto2009].

Différentes voies d'amélioration ont été proposées, comme l'intégration de perturbations multiples, de gradients de perturbation ou la considération de réseaux d'interactions dans l'écosystème. Le score d'impact cumulé développé par @Halpern2008 constitue un exemple récent [mis à jour par @Halpern2015; @Halpern2019], où plusieurs stresseurs anthropiques ont été caractérisés à l'échelle globale. Cette méthode combine deux propriétés de l'écosystème pour calculer un score d'impact, l'exposition d'une part (occurrence d'une perturbation sur des composantes de l'écosystème) et la vulnérabilité d'autre part (susceptibilité des composantes de l'écosystème à une perturbation) [@Wilson2005; @Halpern2007; @Halpern2008]. L'indice est ainsi calculé selon l'équation ci-dessous, où $D$ est la valeur d'un stresseur, $E$ est la présence/absence d'un écosystème, $\mu$ est un coefficient d'impact, $i$ est un stresseur (jusqu'à $n$), $j$ est un écosystème (jusqu'à $m$) :

$$ I_{C} = \sum_{j=1}^{n} \frac{1}{n} \sum_{i=1}^{m} D_{i}.E_{j}.\mu_{i,j} $$

En l'état des connaissances, considérer la vulnérabilité de façon adéquate demande un large volume de données (par ex. sur les tolérances physiologiques des espèces, les interactions biotiques ou les modes d'action des perturbations) qui peuvent être spécifiques à des écosystèmes particuliers, ce qui augmente rapidement la complexité de ces évaluations [@Wilson2005; @Beauchesne2020a]. Une solution possible est de se concentrer sur l'exposition, afin de cibler quels compartiments pourraient être influencés par des perturbations spécifiques, et ainsi focaliser les efforts d'évaluation de la vulnérabilité sur les interactions déterminées pertinentes.

L'évaluation du statut de l'écosystème peut être réalisée à différentes échelles spatiales selon les systèmes écologiques, les objectifs de conservation ainsi que les unités de gestion considérées. Bien que les études régionales et mondiales permettent d'obtenir des informations pertinentes sur les tendances à large échelle et de mobiliser un ensemble de nations pour atteindre des objectifs communs, il est important de considérer des études à plus petite échelle (par ex. à l'échelle d'un estuaire, d'une baie, d'une côte) car les processus écologiques ne sont pas identiques et d'autres types de réponses peuvent être détectés [@Comin2004; @Crowe2015; @Solan2016]. Ceci met en lumière la nécessité d'adapter les recommandations d'une étude écologique à l'échelle spatiale considérée pour obtenir des systèmes de gestion efficaces, où la mobilisation des parties publiques, industrielles et scientifiques permet d'atteindre les objectifs de protection environnementale.

# Application dans le Golfe du Saint-Laurent {-}

En 2019, 13,8 % des eaux du Canada étaient régulées par une forme de gestion publique et 8,9 % (511 906 km^2^) étaient officiellement protégées [@ECCC2020]. Ce total pourrait augmenter à 30 % d'ici 2030, suite à la décision de rejoindre la *Global Ocean Alliance* [@GC2020]. Le long de la côte Est du Canada, le complexe de l'Estuaire et du Golfe du Saint-Laurent est l'une des régions qui concentre le plus d'activités humaines [@Belley2010; @Daigle2017; @Schloss2017]. Le transport de marchandises depuis l'Atlantique vers les Grands Lacs est un axe commercial majeur, à partir duquel sont connectées de nombreuses chaînes d'approvisionnement au Canada et aux États-Unis [@GQ2017].

Le Golfe du Saint-Laurent comprend les eaux entre Pointe-des-Monts jusqu'aux détroits de Cabot et Belle-Isle (Figure \ref{Intro_Fig3}). Cette région est considérée subarctique, subissant ainsi de fortes variations de température et de salinité dues à la formation de glace sur les côtes et de banquise en hiver, ainsi que d'importants apports d'eau douce suite au dégel au printemps [@Dutil2012; @Demers2018]. Il s'agit d'une zone importante de biodiversité, avec la présence d'espèces emblématiques, telles que des mammifères marins (par ex. le béluga ou la baleine à bosse) [@Schloss2017; @ROMM2020], et de nombreuses espèces d'intérêt commercial pour la pêche (par ex. le crabe des neiges, la crevette nordique, le flétan de l'Altantique) [@DFO2019]. Plusieurs initiatives à l'échelle du Québec et du Canada font de la sauvegarde des écosystèmes dans le système du Saint-Laurent une priorité [@GQ2015], et le Ministère des Pêches et Océans a désigné cette région comme une aire de gestion intégrée avec des objectifs de protection des écosystèmes [@DFO2009; @DFO2013].

Selon @Beauchesne2020a, plusieurs régions concentrent un nombre élevé d'activités humaines, notamment le long des côtes à l'ouest du Golfe. Ceci est d'autant plus vrai pour les zones industrialo-portuaires, qui correspondent à un espace délimité servant à des fins industrielles et situé à proximité de services portuaires ainsi que d'infrastructures routières et ferroviaires [@GC2020]. Parmi les zones industrialo-portuaires présentes dans le Golfe du Saint-Laurent, celle située à Sept-Îles (région Côte-Nord) est certainement la plus importante. Sept-Îles est le 2^e^ port québécois, le 4^e^ canadien, et en 2019, 29,3 millions de tonnes de marchandises y ont été échangées [@Binkley2020; @PortSI2020]. Les principales industries sont l'exportation du minerai acheminé par train depuis les mines du nord du Québec et du Labrador, la production d'aluminium, la pêche commerciale (crabe des neige, crevette nordique, flétan et bulot), ainsi que le tourisme [@DFO2019].

La région maritime de Sept-Îles est composée de deux éléments géographiques d'importance : la Baie des Sept Îles et l'archipel à son entrée (Figure \ref{Intro_Fig3}). La profondeur moyenne dans la baie est de 35 m et peut atteindre 150 m dans les chenaux de l'archipel [@Dutil2012], et la circulation est de type estuarienne avec une forte influence de cycle des marées [@Shaw2019]. Le climat de cette région est considéré comme subarctique, avec une végétation et une hydrologie particulière au nord du Québec, ainsi que la formation de glace sur les côtes en novembre/décembre et leur dégel en avril [@Demers2018].\

\begin{figure}[H]
\centering
\includegraphics[width=1\columnwidth]{figures/Intro_Fig3.png}
\caption{Carte de la zone d'étude considérée tout au long de cette thèse de doctorat. Les isobathes ont été représentées dans la Baie des Sept Îles (mètres).}
\label{Intro_Fig3}
\end{figure}

Peu d'études écologiques ont cherché à caractériser ces écosystèmes ainsi que leur environnement abiotique, ce qui pose un défi conséquent dans le cadre de la stratégie de protection des écosystèmes dans le système du Saint-Laurent. La zone industrialo-portuaire de Sept-Îles représente donc un cadre d'étude particulièrement intéressant afin de comprendre comment les activités humaines influencent des écosystèmes côtiers canadiens à l'échelle locale.

# Objectifs et structure de la thèse {-}

## Objectifs spécifiques {-}

L'objectif principal de cette thèse de doctorat est de décrire les relations entre communautés benthiques et activités humaines à l'échelle d'une zone industrialo-portuaire subarctique, notamment dans un contexte d'évaluation du statut environnemental. Pour répondre à cet objectif, la thèse est divisée en trois chapitres, illustrés par le schéma conceptuel de la Figure \ref{Intro_Fig4}.

En premier lieu, j'ai réalisé la première description synthétique de la structure des écosystèmes benthiques côtiers dans la région de Sept-Îles, permettant de disposer de données importantes sur les communautés macrobenthiques et leurs habitats (chapitre 1). En me basant sur ces résultats, j'ai ensuite cherché à déterminer quel était le statut environnemental de la zone industrialo-portuaire de Sept-Îles en testant plusieurs indicateurs écologiques (chapitre 2). Enfin, partant du fait que beaucoup de ces indicateurs possèdent des limitations dans leur interprétation, j'ai développé un modèle local pour caractériser l'exposition des communautés benthiques aux activités humaines et j'ai testé l'efficacité de ce modèle à prédire la structure des communautés benthiques (chapitre 3).

Une section d'annexes vient compléter ce travail en proposant d'une part une réflexion sur la contribution des évaluations environnementales holistiques aux objectifs d'Aichi pour la biodiversité et des priorités de recherche pour augmenter leur potentiel en terme de gestion des écosystèmes marins et d'autre part les jeux de données d'une étude pilote dans la région de Sept-Îles qui s'est intéressée aux écosystèmes intertidaux.

\begin{figure}[H]
\centering
\includegraphics[width=0.8\columnwidth]{figures/Intro_Fig4.png}
\caption{Diagramme intégratif représentant les liens entre les différents chapitres de la thèse de doctorat. Les flèches grises correspondent aux liens entre composantes considérées des écosystèmes de la région d'étude (encadrés gris) et les chapitres (encadrés pourpres). Les flèches pourpres correspondent au débouché de chaque chapitre.}
\label{Intro_Fig4}
\end{figure}

\clearpage

## Structure des chapitres {-}

\noindent \textit{Chapitre 1 : Évaluation de la biodiversité et de l'habitat des communautés benthiques côtiers en zone industrialo-portuaire subarctique} \linebreak[2]

La région de Sept-Îles possède une faible quantité de données décrivant les communautés et habitats benthiques. Afin de soutenir l'utilisation de méthodes d'évaluation environnementale et de décrire efficacement les réponses des écosystèmes aux perturbations, ce chapitre a pour objectifs :

- Décrire les habitats et communautés macrobenthiques dans la région de Sept-Îles
- Évaluer les liens entre les communautés et les variables abiotiques de leur habitat
- Étudier la similarité des assemblages benthiques dans la zone considérée
- Évaluer comment des choix méthodologiques, tel que le choix de la taille des organismes échantillonnés, influence la description de l'écosystème

Deux campagnes de terrain ont permis de récolter les données écologiques nécessaires pour répondre à ces objectifs, en particulier grâce à l'identification des espèces macrobenthiques et la mesure de variables abiotiques. Plusieurs groupes de stations d'échantillonnage ont été formés en fonction de la similarité de leurs assemblages d'espèces, et leur relation avec l'habitat a été évaluée afin de comprendre quelles étaient les variables abiotiques structurantes. \linebreak[4]

\noindent \textit{Chapitre 2 : Déterminer le statut écologique de communautés benthiques côtières : étude de cas en zone anthropisée subarctique} \linebreak[2]

En se basant sur les travaux réalisés pour le chapitre 1, il est possible de se demander si les écosystèmes étudiés sont en bon état écologique, avec des perspectives de gestion et de conservation. Ainsi, les objectifs de ce chapitre sont :

- Comparer les spécificités de différents indicateurs environnementaux
- Valider les résultats obtenus en mettant en relation le statut environnemental obtenu avec les paramètres de l'habitat
- Identifier les avantages et inconvéniants de chaque indicateur

Les indicateurs ont été sélectionnés au moyen d'une revue de littérature puis classés selon leur méthodologie. Ils ont ensuite été appliqués sur les données du chapitre 1, après recherche d'informations complémentaires sur les espèces benthiques échantillonnées, notamment leur diversité et leurs réponses aux perturbations. Enfin, les corrélations entre indicateurs et paramètres de l'habitat ont été testées pour comprendre la pertinence de chaque indicateur. \linebreak[4]

\noindent \textit{Chapitre 3 : Description de l'exposition des écosystèmes benthiques côtiers aux activités humaines à l'échelle locale} \linebreak[2]

Ce dernier chapitre entreprend de mettre en relation les communautés macrobenthiques avec les activités humaines présentes dans cette région en décrivant l'exposition anthropique des écosystèmes à l'échelle locale. Les objectifs spécifiques sont :

- Modéliser localement l'exposition des écosystèmes benthiques aux activités humaines
- Évaluer la structure des communautés en fonction de leur exposition anthropique

Pour ce chapitre, des modèles d'exposition basés sur la diffusion spatiale de particules et les évènements de pêche ont été développés pour déterminer les régions les plus exposées à différentes activités humaines locales. Le principal défi a été de modéliser adéquatement le comportement des particules dans un environnement où peu de données, notamment sur l'hydrodynamisme, étaient disponibles. Cet indice a caractérisé les influences individuelles et cumulées des activités humaines locales. Des modèles joints de distribution d'espèces -- qui prennent en compte les interactions entre les taxons présents au sein d'une communauté -- ont été utilisés pour comprendre les liens entre la structure des communautés benthiques d'une part et les variables de l'habitat et les indices d'exposition d'autre part.
